@@ -3,6 +3,7 @@
     * http_state and default decorator fix to chain usage
     * JSONResponse
     * 418 I'am a teapot state
+    * SessionError exception based on RuntimeError
 
 ==== 2.1.1 ====
     * OpenAPIRequest host_url property fix
